#150 [Sankar/ Lokesh] Fixed the defects on block quote alignment

--- a/article/static/article/css/blocks.less
+++ b/article/static/article/css/blocks.less
@@ -159,8 +159,7 @@
       .quote-align-left.block-quote {
         margin-left: 0;
         .rich-text {
-          margin: 2%;
-          width: 100%;
+          margin: 5%;
           margin-top: 1%;
           margin-bottom: 5%;
         }
@@ -168,7 +167,6 @@
       .quote-align-left.block-quote:lang(ur) {
         .rich-text {
           margin: 0%;
-          width: 100%;
           margin-top: 1%;
           margin-bottom: 5%;
 
@@ -176,8 +174,7 @@
       }
       .quote-align-right.block-quote {
         .rich-text {
-          margin: 2%;
-          width: 100%;
+          margin: 5%;
           margin-top: 1%;
           margin-bottom: 5%;
         }
@@ -186,7 +183,6 @@
     .quote-align-right.block-quote:lang(ur) {
         .rich-text {
           margin: 2%;
-          width: 100%;
           margin-top: 1%;
           margin-bottom: 5%;
         }
